style.css
@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }




*{
  margin: 0;
  padding: 0;
  font-family: 'Inconsolata', monospace;
}




main{
  height: 100vh;
  background: url("tokyoBackground.png") fixed no-repeat;
  background-size: cover;
}



#blurredContainer{
  width: 350px;
  height: 500px;\
  background: inherit;
  position: absolute;
  overflow: hidden;
  top: 50%;
  left: 50%;
  margin-left: -175px;
  margin-top: -250px;
  border-radius: 8px;
}

#blurredContainer:before{
  width: 400px;
  height: 550px;
  content: "";
  position: absolute;
  top: -25px;
  left: -25px;
  bottom: 0;
  right: 0;
  background: inherit;
  box-shadow: inset 0 0 0 200px rgba(255,255,255,0.2);
  filter: blur(10px);
}

#avatar{
	
}

a.wave:link {
	color: #FF00FF;
	text-decoration: none;
	font-style: bold;
	cursor: default;
}
a.wave:visited {
	color: #FF00FF;
	text-decoration: none;
	font-style: bold;
}
a.wave:hover {
	color: #FF00FF;
	text-decoration: none;
	font-style: bold;
}
a.wave:active {
	color: #FF00FF;
	text-decoration: none;
	font-style: bold;
}



a.skip:link {
	color: #FFFFFF;
	text-decoration: none;
	font-style: bold;
	cursor: default;
}
a.skip:visited {
	color: #FFFFFF;
	text-decoration: none;
	font-style: bold;
}
a.skip:hover {
	color: #FFFFFF;
	text-decoration: none;
	font-style: bold;
}
a.skip:active {
	color: #FFFFFF;
	text-decoration: none;
	font-style: bold;
}


.ub1{
	position: relative;
	line-height: 60px;
	text-align:center;
	
	width:100%;
	height: 15%;
	
    
	font-size: 30px;
	text-shadow: 0px 0px 10px #000000;
	color: #ffffff
}

.ub2{
	position: relative;
	line-height: 25px;
	text-align:center;
	
	width:100%;
	height: 10%;
	
    
	font-size: 20px;
	text-shadow: 0px 0px 10px #000000;
	color: #ffffff
}

.ub3{
	position: relative;
	line-height: 25px;
	text-align:center;
	
	width:100%;
	height: 15%;
	
    
	font-size: 20px;
	text-shadow: 0px 0px 10px #000000;
	color: #ffffff
}

.ub4{
	position: relative;
	line-height: 25px;
	text-align:center;
	
	width:100%;
	height: 15%;
	
    
	font-size: 20px;
	text-shadow: 0px 0px 10px #000000;
	color: #ffffff
}

.ub5{
	position: relative;
	line-height: 25px;
	text-align:center;
	
	width:100%;
	height: 20%;
	
    
	font-size: 20px;
	text-shadow: 0px 0px 10px #000000;
	color: #ffffff
}

.ub6{
	position: relative;
	line-height: 25px;
	text-align:center;
	
	width:100%;
	height: 20%;
	
    
	font-size: 20px;
	text-shadow: 0px 0px 10px #000000;
	color: #ffffff
}

.ub7{
	position: absolute;
	line-height: 25px;
	text-align:center;
	
	width:10%;
	height: 10%;
	
    top: 900px;
	
	font-size: 30px;
	text-shadow: 0px 0px 10px #000000;
	color: #ffffff
}




.fade-in {
	opacity:0;  /* make things invisible upon start */
	-webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
	-moz-animation:fadeIn ease-in 1;
	animation:fadeIn ease-in 1;
	
	-webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
	-moz-animation-fill-mode:forwards;
	animation-fill-mode:forwards;

	-webkit-animation-duration:1s;
	-moz-animation-duration:1s;
	animation-duration:1s;
}

.fade-in.skip {
-webkit-animation-delay: 2.5s;
-moz-animation-delay: 2.5s;
animation-delay: 2.5s;
}
.fade-in.one {
-webkit-animation-delay: 0.5s;
-moz-animation-delay: 0.5s;
animation-delay: 0.5s;
}
 
.fade-in.two {
-webkit-animation-delay: 2s;
-moz-animation-delay:2s;
animation-delay: 2s;
}
 
.fade-in.three {
-webkit-animation-delay: 4s;
-moz-animation-delay: 4s;
animation-delay: 4s;
}

.fade-in.four {
-webkit-animation-delay: 7s;
-moz-animation-delay: 7s;
animation-delay: 7s;
}

.fade-in.five {
-webkit-animation-delay: 10s;
-moz-animation-delay: 10s;
animation-delay: 10s;
}

.fade-in.six {
-webkit-animation-delay: 13s;
-moz-animation-delay: 13s;
animation-delay: 13s;
}




.img-circle {
	width: 150px;
	height: 150px;
	position: absolute;
	overflow: hidden;
	top: 50%;
	left: 50%;
	margin-left: -75px;
	margin-top: -220px;
	
    border-radius: 50%;
	z-index:1;
	
	display: block;
	
}

